# file-server-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  filesrv-cli  pyproject.toml  requirements.md
.github/workflows/: ci.yml
app/: database.py  main.py  model.sql
cli/: client.py
tests/: conftest.py  test_api.py
