[tool.poetry]
name = "file-server-demo"
version = "0.1.0"
description = "file server demo"
authors = ["seanmamasde <seanmamasde@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.14"
uvicorn = { extras = ["standard"], version = "^0.35.0" }
asyncpg = "^0.30.0"
python-multipart = "^0.0.20"
click = "^8.2.1"
requests = "^2.32.4"
python-dotenv = "^1.1.1"
rich = "^14.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
httpx = "^0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
